Integrated the new backend User object which has a single name and a device ID
